--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -10,5 +10,6 @@
         android:text="Hoje - Ensolarado - 24 / 18"
         android:id="@+id/list_item_forecast_textview"
         android:minHeight="?android:attr/listPreferredItemHeight"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:textColor="#000000" />
 </LinearLayout>
