--- a/app/src/main/res/menu/activity_detail.xml
+++ b/app/src/main/res/menu/activity_detail.xml
@@ -2,11 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
-    <item android:id="@+id/action_refresh"
-        android:title="@string/action_refresh"
-        app:showAsAction="never"/>
-    <item android:id="@+id/action_main_settings"
+    tools:context=".DetailActivity">
+    <item android:id="@+id/action_detail_settings"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 </menu>
