--- a/app/src/main/res/menu/activity_detail.xml
+++ b/app/src/main/res/menu/activity_detail.xml
@@ -6,4 +6,8 @@
     <item android:id="@+id/action_detail_settings"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item android:id="@+id/action_detail_sharing"
+        android:title="@string/action_sharing"
+        android:showAsAction="always"
+        android:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
 </menu>
